# LanBoard

./: .gitignore  B_MODULE_README.md  CMakeLists.txt  CMakePresets.json  ECS部署流程.md  Git协作流程.md  NETWORK_DISCOVERY.md  PROTOCOL.md  Qt安装流程.md  README.md  任务分工.md  技术开发日志.md  测试验证报告.md  许宇杰_个人负责模块实训汇报.pptx  许宇杰_小学期实训论文.docx  许宇杰_小学期实训论文_按模板格式.docx  许宇杰_答辩准备清单与可能问题.docx  论文格式.docx
docs/: document-index.md  main-sync-test-results-20260706.md  main-sync-test-results-20260707.md  main-sync-test-results.md  main-sync-work-report-20260708.md  main-sync-work-report-20260709.md  main-sync-workplan-20260706.md  main-sync-workplan-20260707.md  main-sync-workplan-20260709.md  main-sync-workplan.md  network-messages.md  network-refactor-work-report-20260705.md  network-refactor-work-report.md  network-refactor-workplan-20260705.md  network-refactor-workplan.md  pre-main-merge-test-results-20260705.md  pre-main-merge-test-results.md  pre-main-merge-workplan-20260705.md  pre-main-merge-workplan.md
projects/lanboard-defense-preview_ppt169_20260710/exports/: lanboard-defense-preview_20260710_104113.pptx
qml/: Main.qml
qml/components/: ActionButton.qml  AppTheme.qml  BottomTextNav.qml  GameCard.qml  PageHeader.qml  PlayerAvatar.qml  PlayerCard.qml  SettingCard.qml  qmldir
qml/pages/: ChessPage.qml  DormDefensePage.qml  DouDiZhuPage.qml  FlightChessPage.qml  GamePage.qml  HomePage.qml  RoomPage.qml  SettingsPage.qml  SurvivorPage.qml  Work3Game.qml  Work3Page.qml  qmldir
src/: main.cpp
src/app/: appcontroller.cpp  appcontroller.h
src/common/: gamecontrollerbase.cpp  gamecontrollerbase.h  roomtypes.h  types.h
src/game/: dormdefensecontroller.cpp  dormdefensecontroller.h  doudizhucontroller.cpp  doudizhucontroller.h  flightchesscontroller.cpp  flightchesscontroller.h  gamecontroller.cpp  gamecontroller.h  survivorcontroller.cpp  survivorcontroller.h  survivornetcodec.cpp  survivornetcodec.h  survivorrenderitem.cpp  survivorrenderitem.h  survivorruntime.cpp  survivorruntime.h  survivorsimulation.cpp  survivorsimulation.h  survivorworld.h
src/lobby/: roommanager.cpp  roommanager.h
src/network/: enetutils.cpp  enetutils.h  linejsonprotocol.cpp  linejsonprotocol.h  networkaddressutils.cpp  networkaddressutils.h  networkmanager.cpp  networkmanager.h  protocolids.h  roomdiscoveryservice.cpp  roomdiscoveryservice.h
src/server/: main.cpp  serverapp.cpp  serverapp.h
tests/: appcontrollerregressiontest.cpp  networkdiscoverytest.cpp  roommanagertest.cpp
